Fix notes bubbles overflowing off the page

--- a/src/styles/notes.module.css
+++ b/src/styles/notes.module.css
@@ -28,14 +28,14 @@
     will-change: transform;
 }
 
-@media (max-width: 30rem) {
+@media (max-width: 38em) {
     .notesItem {
-        width: 3rem !important;
-        height: 3rem !important;
+        width: 4rem !important;
+        height: 4rem !important;
         font-size: 0.8rem !important;
         font-weight: 300 !important;
     }
-  }
+}
 
 .notesItem a:last-child {
     margin-right: 0;
@@ -48,13 +48,20 @@
 .icon {
     display: block;
     margin: auto;
-    width: 25px;
-    height: 25px;
+    width: 40px;
+    height: 40px;
 }
 
 @media (min-width: 48rem) {
     .icon {
         width: 50px;
         height: 50px;
+    }
+}
+
+@media (max-width: 38em) {
+    .icon {
+        width: 30px;
+        height: 30px;
     }
 }
